// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`arrow mode > complex >  apple mapping 1`] = `
{
  "generatedColumn": 253,
  "generatedLine": 1,
  "name": " apple",
  "originalColumn": 26,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`arrow mode > complex > @.caml:{'no apples'} | {0} apple | {n}　apples 1`] = `"(ctx) => {const { normalize: _normalize, linked: _linked, type: _type, interpolate: _interpolate, list: _list, named: _named, plural: _plural } = ctx;return _plural([_normalize([_linked("no apples", "caml", _type)]), _normalize([_interpolate(_list(0)), " apple"]), _normalize([_interpolate(_named("n")), "　apples"])])}"`;

exports[`arrow mode > complex > 0 mapping 1`] = `
{
  "generatedColumn": 229,
  "generatedLine": 1,
  "name": "0",
  "originalColumn": 23,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`arrow mode > complex > caml mapping 1`] = `
{
  "generatedColumn": 199,
  "generatedLine": 1,
  "name": "caml",
  "originalColumn": 1,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`arrow mode > complex > n mapping 1`] = `
{
  "generatedColumn": 277,
  "generatedLine": 1,
  "name": "n",
  "originalColumn": 35,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`arrow mode > complex > no apples mapping 1`] = `
{
  "generatedColumn": 186,
  "generatedLine": 1,
  "name": "no apples",
  "originalColumn": 7,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`arrow mode > complex > 　apples mapping 1`] = `
{
  "generatedColumn": 304,
  "generatedLine": 1,
  "name": "　apples",
  "originalColumn": 38,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`linked > key >  ! mapping 1`] = `
{
  "generatedColumn": 46,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 9,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`linked > key > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`linked > key > hi @:name ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize, linked: _linked, type: _type } = ctx
  return _normalize([
    "hi ", _linked("name", undefined, _type), " !"
  ])
}"
`;

exports[`linked > key > name mapping 1`] = `
{
  "generatedColumn": 19,
  "generatedLine": 4,
  "name": "name",
  "originalColumn": 5,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`linked > list >  ! mapping 1`] = `
{
  "generatedColumn": 62,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 8,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`linked > list > 0 mapping 1`] = `
{
  "generatedColumn": 19,
  "generatedLine": 4,
  "name": "0",
  "originalColumn": 5,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`linked > list > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`linked > list > hi @:{0} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize, interpolate: _interpolate, list: _list, linked: _linked, type: _type } = ctx
  return _normalize([
    "hi ", _linked(_interpolate(_list(0)), undefined, _type), " !"
  ])
}"
`;

exports[`linked > modifier >  ! mapping 1`] = `
{
  "generatedColumn": 44,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 19,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`linked > modifier > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`linked > modifier > hi @.upper:{'name'} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize, linked: _linked, type: _type } = ctx
  return _normalize([
    "hi ", _linked("name", "upper", _type), " !"
  ])
}"
`;

exports[`linked > modifier > name mapping 1`] = `
{
  "generatedColumn": 19,
  "generatedLine": 4,
  "name": "name",
  "originalColumn": 11,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`linked > modifier > upper mapping 1`] = `
{
  "generatedColumn": 27,
  "generatedLine": 4,
  "name": "upper",
  "originalColumn": 4,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`linked > named >  ! mapping 1`] = `
{
  "generatedColumn": 68,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 11,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`linked > named > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`linked > named > hi @:{name} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize, interpolate: _interpolate, named: _named, linked: _linked, type: _type } = ctx
  return _normalize([
    "hi ", _linked(_interpolate(_named("name")), undefined, _type), " !"
  ])
}"
`;

exports[`linked > named > name mapping 1`] = `
{
  "generatedColumn": 19,
  "generatedLine": 4,
  "name": "name",
  "originalColumn": 5,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`list > basic >  ! mapping 1`] = `
{
  "generatedColumn": 35,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 6,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`list > basic > 0 mapping 1`] = `
{
  "generatedColumn": 11,
  "generatedLine": 4,
  "name": "0",
  "originalColumn": 3,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`list > basic > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`list > basic > hi {0} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize, interpolate: _interpolate, list: _list } = ctx
  return _normalize([
    "hi ", _interpolate(_list(0)), " !"
  ])
}"
`;

exports[`list > multiple >   mapping 1`] = `
{
  "generatedColumn": 28,
  "generatedLine": 4,
  "name": " ",
  "originalColumn": 3,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`list > multiple >  ! mapping 1`] = `
{
  "generatedColumn": 57,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 7,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`list > multiple > {0} {1} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize, interpolate: _interpolate, list: _list } = ctx
  return _normalize([
    _interpolate(_list(0)), " ", _interpolate(_list(1)), " !"
  ])
}"
`;

exports[`list > multiple > 0 mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "0",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`list > multiple > 1 mapping 1`] = `
{
  "generatedColumn": 33,
  "generatedLine": 4,
  "name": "1",
  "originalColumn": 4,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > !#%^&*()-_+=[]:;?.<>"\` >  ! mapping 1`] = `
{
  "generatedColumn": 38,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 29,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > !#%^&*()-_+=[]:;?.<>"\` > !#%^&*()-_+=[]:;?.<>"\` mapping 1`] = `
{
  "generatedColumn": 11,
  "generatedLine": 4,
  "name": "!#%^&*()-_+=[]:;?.<>"\`",
  "originalColumn": 3,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > !#%^&*()-_+=[]:;?.<>"\` > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > !#%^&*()-_+=[]:;?.<>"\` > hi {'!#%^&*()-_+=[]:;?.<>"\`'} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize } = ctx
  return _normalize([
    "hi ", "!#%^&*()-_+=[]:;?.<>\\"\`", " !"
  ])
}"
`;

exports[`literal > {} > {'{}'} 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize } = ctx
  return _normalize([
    "{}"
  ])
}"
`;

exports[`literal > {} > {} mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "{}",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > ascii >  ! mapping 1`] = `
{
  "generatedColumn": 22,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 14,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > ascii > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > ascii > hi {'kazupon'} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize } = ctx
  return _normalize([
    "hi ", "kazupon", " !"
  ])
}"
`;

exports[`literal > ascii > kazupon mapping 1`] = `
{
  "generatedColumn": 11,
  "generatedLine": 4,
  "name": "kazupon",
  "originalColumn": 3,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > emoji >  ! mapping 1`] = `
{
  "generatedColumn": 17,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 9,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > emoji > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > emoji > hi {'😺'} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize } = ctx
  return _normalize([
    "hi ", "😺", " !"
  ])
}"
`;

exports[`literal > emoji > 😺 mapping 1`] = `
{
  "generatedColumn": 11,
  "generatedLine": 4,
  "name": "😺",
  "originalColumn": 3,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > escaped single quote >  ! mapping 1`] = `
{
  "generatedColumn": 16,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 9,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > escaped single quote > ' mapping 1`] = `
{
  "generatedColumn": 11,
  "generatedLine": 4,
  "name": "'",
  "originalColumn": 3,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > escaped single quote > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > escaped single quote > hi {'\\''} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize } = ctx
  return _normalize([
    "hi ", "'", " !"
  ])
}"
`;

exports[`literal > escaped slash >  ! mapping 1`] = `
{
  "generatedColumn": 17,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 9,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > escaped slash > \\ mapping 1`] = `
{
  "generatedColumn": 11,
  "generatedLine": 4,
  "name": "\\",
  "originalColumn": 3,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > escaped slash > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > escaped slash > hi {'\\\\'} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize } = ctx
  return _normalize([
    "hi ", "\\\\", " !"
  ])
}"
`;

exports[`literal > escaped unicode 4 digits >  ! mapping 1`] = `
{
  "generatedColumn": 22,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 14,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > escaped unicode 4 digits > \\u0041 mapping 1`] = `
{
  "generatedColumn": 11,
  "generatedLine": 4,
  "name": "\\u0041",
  "originalColumn": 3,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > escaped unicode 4 digits > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > escaped unicode 4 digits > hi {'\\\\u0041'} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize } = ctx
  return _normalize([
    "hi ", "\\\\u0041", " !"
  ])
}"
`;

exports[`literal > escaped unicode 6 digits >  ! mapping 1`] = `
{
  "generatedColumn": 24,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 16,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > escaped unicode 6 digits > \\U01F602 mapping 1`] = `
{
  "generatedColumn": 11,
  "generatedLine": 4,
  "name": "\\U01F602",
  "originalColumn": 3,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > escaped unicode 6 digits > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > escaped unicode 6 digits > hi {'\\\\U01F602'} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize } = ctx
  return _normalize([
    "hi ", "\\\\U01F602", " !"
  ])
}"
`;

exports[`literal > multibytes >  ! mapping 1`] = `
{
  "generatedColumn": 19,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 11,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > multibytes > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > multibytes > hi {'かずぽん'} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize } = ctx
  return _normalize([
    "hi ", "かずぽん", " !"
  ])
}"
`;

exports[`literal > multibytes > かずぽん mapping 1`] = `
{
  "generatedColumn": 11,
  "generatedLine": 4,
  "name": "かずぽん",
  "originalColumn": 3,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > unicode 4 digits >  ! mapping 1`] = `
{
  "generatedColumn": 16,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 8,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > unicode 4 digits > A mapping 1`] = `
{
  "generatedColumn": 11,
  "generatedLine": 4,
  "name": "A",
  "originalColumn": 3,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > unicode 4 digits > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > unicode 4 digits > hi {'A'} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize } = ctx
  return _normalize([
    "hi ", "A", " !"
  ])
}"
`;

exports[`literal > unicode 6 digits >  ! mapping 1`] = `
{
  "generatedColumn": 22,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 14,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > unicode 6 digits > U01F602 mapping 1`] = `
{
  "generatedColumn": 11,
  "generatedLine": 4,
  "name": "U01F602",
  "originalColumn": 3,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > unicode 6 digits > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`literal > unicode 6 digits > hi {'U01F602'} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize } = ctx
  return _normalize([
    "hi ", "U01F602", " !"
  ])
}"
`;

exports[`named > basic >  ! mapping 1`] = `
{
  "generatedColumn": 41,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 9,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`named > basic > hi  mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hi ",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`named > basic > hi {name} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize, interpolate: _interpolate, named: _named } = ctx
  return _normalize([
    "hi ", _interpolate(_named("name")), " !"
  ])
}"
`;

exports[`named > basic > name mapping 1`] = `
{
  "generatedColumn": 11,
  "generatedLine": 4,
  "name": "name",
  "originalColumn": 3,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`named > multiple >   mapping 1`] = `
{
  "generatedColumn": 38,
  "generatedLine": 4,
  "name": " ",
  "originalColumn": 10,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`named > multiple >  ! mapping 1`] = `
{
  "generatedColumn": 73,
  "generatedLine": 4,
  "name": " !",
  "originalColumn": 17,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`named > multiple > {greeting} {name} ! 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize, interpolate: _interpolate, named: _named } = ctx
  return _normalize([
    _interpolate(_named("greeting")), " ", _interpolate(_named("name")), " !"
  ])
}"
`;

exports[`named > multiple > greeting mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "greeting",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`named > multiple > name mapping 1`] = `
{
  "generatedColumn": 43,
  "generatedLine": 4,
  "name": "name",
  "originalColumn": 11,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`plural > complex >  apple mapping 1`] = `
{
  "generatedColumn": 30,
  "generatedLine": 7,
  "name": " apple",
  "originalColumn": 26,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`plural > complex > @.caml:{'no apples'} | {0} apple | {n}　apples 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize, linked: _linked, type: _type, interpolate: _interpolate, list: _list, named: _named, plural: _plural } = ctx
  return _plural([
    _normalize([
      _linked("no apples", "caml", _type)
    ]), _normalize([
      _interpolate(_list(0)), " apple"
    ]), _normalize([
      _interpolate(_named("n")), "　apples"
    ])
  ])
}"
`;

exports[`plural > complex > 0 mapping 1`] = `
{
  "generatedColumn": 6,
  "generatedLine": 7,
  "name": "0",
  "originalColumn": 23,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`plural > complex > caml mapping 1`] = `
{
  "generatedColumn": 27,
  "generatedLine": 5,
  "name": "caml",
  "originalColumn": 1,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`plural > complex > n mapping 1`] = `
{
  "generatedColumn": 6,
  "generatedLine": 9,
  "name": "n",
  "originalColumn": 35,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`plural > complex > no apples mapping 1`] = `
{
  "generatedColumn": 14,
  "generatedLine": 5,
  "name": "no apples",
  "originalColumn": 7,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`plural > complex > 　apples mapping 1`] = `
{
  "generatedColumn": 33,
  "generatedLine": 9,
  "name": "　apples",
  "originalColumn": 38,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`plural > simple > no apples | one apple  |  too much apples   1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize, plural: _plural } = ctx
  return _plural([
    _normalize([
      "no apples"
    ]), _normalize([
      "one apple"
    ]), _normalize([
      "too much apples  "
    ])
  ])
}"
`;

exports[`plural > simple > no apples mapping 1`] = `
{
  "generatedColumn": 6,
  "generatedLine": 5,
  "name": "no apples",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`plural > simple > one apple mapping 1`] = `
{
  "generatedColumn": 6,
  "generatedLine": 7,
  "name": "one apple",
  "originalColumn": 12,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`plural > simple > too much apples   mapping 1`] = `
{
  "generatedColumn": 6,
  "generatedLine": 9,
  "name": "too much apples  ",
  "originalColumn": 26,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`text > basic > hello world 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize } = ctx
  return _normalize([
    "hello world"
  ])
}"
`;

exports[`text > basic > hello world mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hello world",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "message.intl",
}
`;

exports[`text > multline > hello
 world 1`] = `
"function __msg__ (ctx) {
  const { normalize: _normalize } = ctx
  return _normalize([
    "hello\\n world"
  ])
}"
`;

exports[`text > multline > hello
 world mapping 1`] = `
{
  "generatedColumn": 4,
  "generatedLine": 4,
  "name": "hello
 world",
  "originalColumn": 0,
  "originalLine": 1,
  "source": "foo.bar",
}
`;
